@@ -33,3 +33,8 @@ Other Changes
   attribute to itself without any prior assignment.
 
   Closes #1555
+
+* Emit ``redefined-outer-name`` when a loop variable is redefined in the loop
+  body. Previously, only redefinitions taking place in nested loops were flagged.
+
+  Closes #5608
