@@ -13,6 +13,7 @@ def titii():
 
 def tataa(kdict):
     for key in ['1', '2', '3']:
+        # pylint: disable=redefined-outer-name
         key = key.lower()
 
         if key in kdict:
