@@ -1,7 +1,7 @@
 function-redefined:18:4:18:15:AAAA.method2:method already defined line 15:UNDEFINED
 function-redefined:21:0:21:10:AAAA:class already defined line 8:UNDEFINED
 function-redefined:35:0:35:9:func2:function already defined line 32:UNDEFINED
-redefined-outer-name:37:4:37:16:func2:Redefining name '__revision__' from outer scope (line 7):UNDEFINED
+redefined-outer-name:37:4:37:16:func2:Redefining name '__revision__' from outer scope or loop (line 7):UNDEFINED
 function-redefined:54:4:54:23:exclusive_func2:function already defined line 48:UNDEFINED
 function-redefined:89:0:89:8:ceil:function already defined line 88:UNDEFINED
 function-redefined:93:0:93:8:math:function already defined line 92:UNDEFINED
