@@ -1,1 +1,1 @@
-redefined-outer-name:4:4:6:20::Redefining name 'item' from outer scope (line 2):UNDEFINED
+redefined-outer-name:4:4:6:20::Redefining name 'item' from outer scope or loop (line 2):UNDEFINED
