@@ -1,4 +1,4 @@
-redefined-outer-name:11:4:12:12::Redefining name 'err' from outer scope (line 8):UNDEFINED
-redefined-outer-name:57:8:58:16::Redefining name 'err' from outer scope (line 51):UNDEFINED
+redefined-outer-name:11:4:12:12::Redefining name 'err' from outer scope or loop (line 8):UNDEFINED
+redefined-outer-name:57:8:58:16::Redefining name 'err' from outer scope or loop (line 51):UNDEFINED
 used-before-assignment:69:14:69:29:func:Using variable 'CustomException' before assignment:HIGH
-redefined-outer-name:71:4:72:12:func:Redefining name 'CustomException' from outer scope (line 62):UNDEFINED
+redefined-outer-name:71:4:72:12:func:Redefining name 'CustomException' from outer scope or loop (line 62):UNDEFINED
