@@ -5,5 +5,5 @@ reimported:10:0:10:27::Reimport 'deque' (imported line 9):UNDEFINED
 reimported:24:0:24:33::Reimport 'ElementTree' (imported line 23):UNDEFINED
 reimported:27:0:27:21::Reimport 'email.encoders' (imported line 26):UNDEFINED
 reimported:29:0:29:10::Reimport 'sys' (imported line 21):UNDEFINED
-redefined-outer-name:40:4:40:14:reimport:Redefining name 'sys' from outer scope (line 16):UNDEFINED
+redefined-outer-name:40:4:40:14:reimport:Redefining name 'sys' from outer scope or loop (line 16):UNDEFINED
 reimported:40:4:40:14:reimport:Reimport 'sys' (imported line 21):UNDEFINED
